# app-drugucopia

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  jest.setup.tsx  next.config.ts  package.json  vitest.config.ts
.github/workflows/: deploy_dev.yml  release.yml
docs/superpowers/specs/: 2026-07-16-per-substance-tolerance-notifications-design.md
public/: sw.js
scripts/: android.sh  diagnose-firebase.js  patch-android.sh  setup-android.sh
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src/app/dose-log/: page.tsx
src/app/settings/: page.tsx
src/components/: SubstanceSelectionList.test.tsx  SubstanceSelectionList.tsx  active-doses-timeline.tsx  alcohol-calculator-fields.tsx  dose-history.tsx  dose-logger-modal.tsx  intensity-timeline-chart.tsx  reminder-provider.tsx  update-check-popup.tsx
src/components/home/: home-content.tsx
src/components/home/detail/: SubstanceDetail.tsx  SubstanceSummary.tsx
src/components/layout/: AppSidebar.tsx  LayoutClient.tsx  navigation.ts
src/components/ui/: collapse.tsx  combobox.tsx
src/contexts/: sync-context.tsx
src/lib/: analytics.ts  db.ts  tolerance-notifications.test.ts  tolerance-notifications.ts  utils.ts
src/lib/calculators/: alcohol.ts
src/store/: dose-store.ts  tolerance-notification-store.ts
tests/: tolerance-notifications.spec.ts
