[package]
name = "drugucopia"
version = "0.1.9"
description = "Drugucopia - Dose Logger and Substance Resources"
authors = ["conflictmedia"]
edition = "2021"

[lib]
name = "drugucopia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

# JNI for Android ongoing notifications (unswipeable)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.aarch64-linux-android]
linker = "lld"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
